<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9E9E9E"
    tools:context=".i_19">

    <Button
        android:id="@+id/back2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="162dp"
        android:layout_marginEnd="161dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/btn"
        android:fontFamily="@font/montserrat"
        android:text="@string/back"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="162dp"
        android:layout_marginRight="161dp" />

    <TextView
        android:id="@+id/UG8"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="67dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="670dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/UG8"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="67dp"
        android:layout_marginRight="70dp"
        android:gravity="center_horizontal" />

    <ListView
        android:id="@+id/spi19"
        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="88dp" />

    <Button
        android:id="@+id/k_i19"
        android:layout_width="386dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="13dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="614dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/montserrat"
        android:text="@string/Ki19"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="13dp"
        android:layout_marginRight="11dp"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/K"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="176dp"
        android:layout_marginEnd="176dp"
        android:layout_marginBottom="601dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/Kurator"
        android:textAlignment="center"
        android:textSize="14sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center_horizontal" />

</RelativeLayout>